.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pos-frontend
  namespace: production
  labels:
    app: pos-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: pos-frontend
